<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AllergyDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkGray"
        android:minHeight="?actionBarSize"
        android:theme="?actionBarTheme">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/detail"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/white"
            android:onClick="saveAllergy"
            android:text="@string/save"
            android:layout_marginEnd="10dp"
            android:textColor="@color/darkGray"
            android:textSize="25sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allergy"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/darkGray"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:maxLines="1"
        android:textColor="@color/darkGray"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/darkGray"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:minLines="3"
        android:textColor="@color/darkGray"
        android:textStyle="bold"
        android:layout_gravity="center"/>


    <Button
        android:id="@+id/deleteAllergyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:onClick="deleteAllergy"
        android:text="@string/delete"
        android:layout_marginEnd="10dp"
        android:textColor="@color/red"
        android:textSize="25sp"
        android:textStyle="bold" />

</LinearLayout>